[package]
name = "admin-poc"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[workspace.package]
license = "MIT or Apache-2.0"

[workspace]
resolver = "3"
members = [
  ".",
  "methods",
  "methods/guest",
]

[workspace.dependencies]
nssa = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }

anyhow = "1.0.98"
risc0-zkvm = { version = "3.0.5", features = ["std"] }
risc0-build = "3.0.5"

hex = "0.4.3"
bytemuck = "1.24.0"
tokio = { version = "1.28.2", features = ["macros", "net", "rt-multi-thread", "sync", "fs"] }
clap = { version = "4.5.42", features = ["derive", "env"] }

[dependencies]
nssa.workspace = true
nssa_core.workspace = true
wallet.workspace = true
example_program_deployment_methods = { path = "methods" }

anyhow.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["macros"] }
